Fri, Dec 26, 2008
---------------------------------------------------------------------
- Some model and javascript refactoring.
- Another sweep at specs to make them pass with the introduction of UUIDs.

Thu, Dec 25, 2008
---------------------------------------------------------------------
- Update campaign lead count and conversion ratio when creating a new lead.
- Make sure :uuid gets reloaded from the database and not from cached attributes.
- Added extra fields to [User] model and implemented [User/Edit profile].

Wed, Dec 24, 2008
---------------------------------------------------------------------
- Created [uses_mysql_uuid] plugin.
- Converted account, campaign, contact, lead, and user models to use UUIDs.
- Updated controllers to use find_by_uuid() instead of find().
- Updated routes to recognize and extract UUID from URLs.

Tue, Dec 23, 2008
---------------------------------------------------------------------
- Updated controller and view specs.
- Added permissions section to [Lead/New] form.
- Added validation and saving to [Lead] model to actually create new leads.

Mon, Dec 22, 2008
---------------------------------------------------------------------
- Moved form section toggling to application helper and home controller.
- Implemented section toggling in account and campaign forms.
- Added [toll_free_phone] field to accounts.
- Added .top and .req styles for field labels.
- Show/hide form sections based on session where we now store expand/collapse state.

Sun, Dec 21, 2008
---------------------------------------------------------------------
- Redesigned [Lead/New] and revamped related CSS styles.
- Reorganized global settings to make it easier to access them at runtime.
- Toggle sections using link_to_remote() to be able to store toggle status in a session.
- Reveal/hide form sections using toggle/slide visual effect.

Sat, Dec 20, 2008
---------------------------------------------------------------------